sidebar and index updates

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,63 @@
 ---
-title: Welcome to Starlight - Test
-description: Get started building your docs site with Starlight.
+title: Skies Development Documentation
+description: Guides and examples for using Skies Development mods
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Guides and examples for using Skies Development mods
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/skiesdev.webp
   actions:
-    - text: Example Guide
+    - text: Read The Docs
       link: /guides/example/
       icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Download Mods
+      link: https://modrinth.com/user/Stampede/mods
       icon: external
       variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
+## Available Mods
 
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
+	<Card title="SkiesGUIs" icon="pencil">
 		Edit `src/content/docs/index.mdx` to see this page change.
 	</Card>
-	<Card title="Add new content" icon="add-document">
+	<Card title="SkiesKits" icon="add-document">
 		Add Markdown or MDX files to `src/content/docs` to create new pages.
 	</Card>
-	<Card title="Configure your site" icon="setting">
+	<Card title="SkiesAnnouncements" icon="setting">
 		Edit your `sidebar` and other config in `astro.config.mjs`.
 	</Card>
-	<Card title="Read the docs" icon="open-book">
+	<Card title="SkiesClear" icon="open-book">
 		Learn more in [the Starlight Docs](https://starlight.astro.build/).
 	</Card>
+    <Card title="SkiesSkins" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="CobblemonPlaceholders" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="SkiesCrates" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="Redeemed" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="RandomCollections" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="SkiesJoinMessages" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="CobblemonNPCUtils" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="CobbleScale" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
+    <Card title="ImpactorPlaceholders" icon="open-book">
+        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+    </Card>
 </CardGrid>
