Migrate to sidebar dropdown

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -22,42 +22,42 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="SkiesGUIs" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
+		Coming soon!
 	</Card>
 	<Card title="SkiesKits" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
+        Coming soon!
 	</Card>
 	<Card title="SkiesAnnouncements" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
+        Coming soon!
 	</Card>
 	<Card title="SkiesClear" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
+		Coming soon!
 	</Card>
     <Card title="SkiesSkins" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="CobblemonPlaceholders" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="SkiesCrates" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="Redeemed" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="RandomCollections" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="SkiesJoinMessages" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="CobblemonNPCUtils" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="CobbleScale" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
     <Card title="ImpactorPlaceholders" icon="open-book">
-        Learn more in [the Starlight Docs](https://starlight.astro.build/).
+        Coming soon!
     </Card>
 </CardGrid>
