feat: added initial SkiesGUIs documentation

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -8,7 +8,7 @@ hero:
     file: ../../assets/skiesdev.webp
   actions:
     - text: Read The Docs
-      link: /guides/example/
+      link: /skiesguis/getting_started/introduction/
       icon: right-arrow
     - text: Download Mods
       link: https://modrinth.com/user/Stampede/mods
@@ -22,7 +22,9 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
 	<Card title="SkiesGUIs" icon="pencil">
-		Coming soon!
+		Server-sided custom GUIs for Fabric servers
+
+        Available for free on [Modrinth](https://modrinth.com/project/skiesguis/). Documentation available [here](/skiesguis/getting_started/introduction/)
 	</Card>
 	<Card title="SkiesKits" icon="add-document">
         Coming soon!
