feat: updated minor formatting and organization of skiesguis docs

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -24,7 +24,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="SkiesGUIs" icon="pencil">
 		Server-sided custom GUIs for Fabric servers
 
-        Available for free on [Modrinth](https://modrinth.com/project/skiesguis/). Documentation available [here](/skiesguis/getting_started/introduction/)
+        Available for free on <a href="https://modrinth.com/project/skiesguis/" target="_blank" rel="noopener noreferrer">Modrinth</a>. Documentation available [here](/skiesguis/getting_started/introduction/)
 	</Card>
 	<Card title="SkiesKits" icon="add-document">
         Coming soon!
