--- a/src/content/docs/skiesguis/guis/base.mdx
+++ b/src/content/docs/skiesguis/guis/base.mdx
@@ -29,7 +29,7 @@ Every GUI can have a base set of configuration options defined. Most importantly
 ```
 
 ### Title (required)
-The message displayed at the top of the GUI. Uses [MiniMessage formatting](https://docs.advntr.dev/minimessage/format.html)!
+The message displayed at the top of the GUI. Uses <a href="https://docs.advntr.dev/minimessage/format.html" target="_blank" rel="noopener noreferrer">MiniMessage formatting</a>!
 ```json
 "title": "<dark_gray>Example Title"
 ```
