feat: added the initial skiescrates documentation

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -26,6 +26,11 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
         Available for free on <a href="https://modrinth.com/project/skiesguis/" target="_blank" rel="noopener noreferrer">Modrinth</a>. Documentation available [here](/skiesguis/getting_started/introduction/)
 	</Card>
+    <Card title="SkiesCrates" icon="seti:folder">
+        Server-sided customizable Crates with rewards for Fabric servers
+
+        Coming soon for free on Modrinth. Documentation available [here](/skiescrates/getting_started/introduction/)
+    </Card>
 	<Card title="SkiesKits" icon="add-document">
         Coming soon!
 	</Card>
@@ -39,9 +44,6 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
         Coming soon!
     </Card>
     <Card title="CobblemonPlaceholders" icon="open-book">
-        Coming soon!
-    </Card>
-    <Card title="SkiesCrates" icon="open-book">
         Coming soon!
     </Card>
     <Card title="Redeemed" icon="open-book">
