--- a/src/content/docs/skiescrates/keys/keys_menu.mdx
+++ b/src/content/docs/skiescrates/keys/keys_menu.mdx
@@ -17,7 +17,7 @@ The Keys Menu is the GUI that players can use to view their virtual Crate Keys, 
 ```json
 {
   "title": "Keys",
-  "menu_type": "GENERIC_9X3",
+  "type": "GENERIC_9X3",
   "keys": {
     "example_key": {
       "item": "minecraft:tripwire_hook",
@@ -51,10 +51,10 @@ The title of the inventory GUI. Uses <a href="https://docs.advntr.dev/minimessag
 ```json
 "title": "Opening %crate_name%"
 ```
-## Menu Type
+## Type
 The type of inventory menu to use.
 ```json
-"menu_type": "GENERIC_9X3"
+"type": "GENERIC_9X3"
 ```
 <LinkCard
     title="GUI Types"
