--- a/src/content/docs/skiescrates/previews/previews.mdx
+++ b/src/content/docs/skiescrates/previews/previews.mdx
@@ -1,5 +1,5 @@
 ---
-title: Preview
+title: Preview Configuration
 description: Guide to configuring Previews for crates in SkiesCrates
 ---
 
@@ -19,63 +19,80 @@ All Previews live in the `previews` folder inside the `config/skiescrates/` dire
 
 ```json
 {
-  "settings": {
-    "title": "Previewing %crate_name%",
-    "menu_type": "GENERIC_9X6"
-  },
-  "buttons": {
-    "reward": {},
-    "page_next": {},
-    "page_previous": {},
-    "close": {}
-  },
+  "title": "Previewing %crate_name%",
+  "menu_type": "GENERIC_9X6",
+  "rewards": {},
   "items": {}
 }
 ```
 
-## Settings
-General settings for the Preview.
+## Title
+The title of the inventory GUI. Uses <a href="https://docs.advntr.dev/minimessage/format.html" target="_blank" rel="noopener noreferrer">MiniMessage formatting</a>!
 ```json
-"settings": {
-    "title": "Previewing %crate_name%",
-    "menu_type": "GENERIC_9X6"
-}
+"title": "Previewing %crate_name%"
+```
+## Type
+The type of inventory menu to use.
+```json
+"menu_type": "GENERIC_9X6"
 ```
 <LinkCard
-    title="Preview Settings"
-    href="/skiescrates/previews/preview_settings/"
-    description="Preview menu related settings"
+    title="GUI Types"
+    href="/skiescrates/getting_started/gui_types/"
+    description="List of available GUI types"
 />
 
-## Buttons
-Buttons are special items that perform actions when clicked. There are four types of buttons available: Reward, Page Next, Page Previous, and Close.
+## Rewards
+Used to define where rewards are displayed and what their name and lore is. The item used is pulled from the reward's display setting. If a reward has a [Preview](/skiescrates/rewards/rewards/#preview) display defined, that is used instead.
 ```json
-"buttons": {
-    "reward": {},
-    "page_next": {},
-    "page_previous": {},
-    "close": {}
+"rewards": {
+  "slots": [
+    10, 11, 12, 13, 14, 15, 16,
+    19, 20, 21, 22, 23, 24, 25,
+    28, 29, 30, 31, 32, 33, 34,
+    37, 38, 39, 40, 41, 42, 43
+  ],
+  "name": "%reward_name%",
+  "lore": [
+    "<gray>Example Lore!",
+    "<gray>Weight: <white>%reward_weight%",
+    "<gray>Chance: <white>%reward_percent%"
+  ]
 }
 ```
-<LinkCard
-    title="Item Configuration"
-    href="/skiescrates/items/item_options/"
-    description="Options to configure a generic item's appearance and data"
-/>
-
 ## Items
-A map list of additional items to display in the menu. These are typically used for background or decorative items.
+A map list of additional items to display in the menu. These are typically used for background or decorative items. Supports Actions, including Pagination related Actions.
 ```json
 "items": {
   "background": {
     "item": "minecraft:black_stained_glass_pane",
     "slots": [
       0, 1, 2, 3, 4, 5, 6, 7, 8,
-      9, 10, 11, 12, 14, 15, 16, 17,
-      18, 19, 20, 21, 22, 23, 24, 25, 26
+      9, 17, 18, 26, 27, 35, 36, 44,
+      46, 47, 48, 50, 51, 52
     ],
     "nbt": {
       "minecraft:hide_tooltip": {}
+    }
+  },
+  "page_next": {
+    "slots": [53],
+    "item": "minecraft:arrow",
+    "name": "<green>Next Page",
+    "actions": {
+      "close": {
+        "type": "NEXT_PAGE"
+      }
+    }
+  },
+  "page_previous": {
+    "slots": [45],
+    "item": "minecraft:arrow",
+    "name": "<green>Previous Page",
+    "actions": {
+      "close": {
+        "type": "PREVIOUS_PAGE"
+      }
     }
   }
 }
