Updated homepage mods list with formatting and descriptions/downloads for existing mods

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -24,44 +24,85 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 	<Card title="SkiesGUIs" icon="pencil">
 		Server-sided custom GUIs for Fabric servers
 
-        Available for free on <a href="https://modrinth.com/project/skiesguis/" target="_blank" rel="noopener noreferrer">Modrinth</a>. Documentation available [here](/skiesguis/getting_started/introduction/)
+        💾 Available for free on <a href="https://modrinth.com/project/skiesguis/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation available [here](/skiesguis/getting_started/introduction/)
 	</Card>
     <Card title="SkiesCrates" icon="seti:folder">
         Server-sided customizable Crates with rewards for Fabric servers
 
-        Coming soon for free on Modrinth. Documentation available [here](/skiescrates/getting_started/introduction/)
+        💾 Available for free on <a href="https://modrinth.com/project/skiescrates/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation available [here](/skiescrates/getting_started/introduction/)
     </Card>
-	<Card title="SkiesKits" icon="add-document">
-        Coming soon!
+    <Card title="ActionItems" icon="star">
+        Server-sided customizable item presets with actions and requirements for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/actionitems/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation available [here](/actionitems/getting_started/introduction/)
+    </Card>
+    <Card title="SkiesKits" icon="add-document">
+        Server-sided customizable Kits for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/skieskits/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
 	</Card>
 	<Card title="SkiesAnnouncements" icon="setting">
-        Coming soon!
+        Server-sided automatic timed announcements for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/skiesannouncements/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
 	</Card>
 	<Card title="SkiesClear" icon="open-book">
-		Coming soon!
+        Server-sided automatic item, entity, and Pokemon clearing for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/skiesclear/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
 	</Card>
     <Card title="SkiesSkins" icon="open-book">
-        Coming soon!
+        Server-sided Cobblemon Pokemon skin management and shop system for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/skins/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
     <Card title="CobblemonPlaceholders" icon="open-book">
-        Coming soon!
+        Server-sided Cobblemon placeholder integration for TextPlaceholderAPI, MiniPlaceholders, and Impactor for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/cobblemonplaceholders/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
     <Card title="Redeemed" icon="open-book">
-        Coming soon!
+        Server-sided redeemable codes system for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/redeemed/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
     <Card title="RandomCollections" icon="open-book">
-        Coming soon!
+        Server-sided system to deliver players randomized rewards from predefined collections for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/randomcollections/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
     <Card title="SkiesJoinMessages" icon="open-book">
-        Coming soon!
+        Server-sided customizable join/leave messages for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/skiesjoinmessages/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
     <Card title="CobblemonNPCUtils" icon="open-book">
-        Coming soon!
+        Server-sided Cobblemon NPC utilities and molang functions for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/cobblemonnpcutils/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
     <Card title="CobbleScale" icon="open-book">
-        Coming soon!
+        Server-sided Cobblemon level scaling spawns mod for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/cobblescale/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
     <Card title="ImpactorPlaceholders" icon="open-book">
-        Coming soon!
+        Server-sided Impactor placeholder integration for TextPlaceholderAPI and MiniPlaceholders for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/impactorplaceholders/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation coming soon!
     </Card>
 </CardGrid>
