Added docs for CobbleDollars Bridge mod

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -39,6 +39,12 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
         💾 Available for free on <a href="https://modrinth.com/project/actionitems/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
         📖 Documentation available [here](/actionitems/getting_started/introduction/)
     </Card>
+    <Card title="CobbleDollars Bridge" icon="open-book">
+        Server-sided bridge between CobbleDollars and Impactor for Fabric servers
+
+        💾 Available for free on <a href="https://modrinth.com/project/cobbledollars-bridge/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
+        📖 Documentation available [here](/cobbledollarsbridge/getting_started/introduction/)
+    </Card>
     <Card title="SkiesKits" icon="add-document">
         Server-sided customizable Kits for Fabric servers
 
