Misc SkiesGUIs docs changes

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,7 +21,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 ## Available Mods
 
 <CardGrid stagger>
-	<Card title="SkiesGUIs" icon="pencil">
+	<Card title="SkiesGUIs" icon="laptop">
 		Server-sided custom GUIs for Fabric servers
 
         💾 Available for free on <a href="https://modrinth.com/project/skiesguis/" target="_blank" rel="noopener noreferrer">Modrinth</a>.<br />
